# godotmark

./: .gitignore  .gitmodules  ADAPTIVE_FIX_APPLY.txt  ADAPTIVE_QUALITY_FIX.md  ADDON_FIXES.md  BUILD_AND_RUN.md  BUILD_FIX.md  BUILD_LOG_ANALYSIS.md  BUILD_RPI5.md  BUILD_SUCCESS_RPI5.md  CHECK_BUILD_STATUS.md  CHECK_LIBRARY_NOW.txt  CMakeLists.txt  CODE_FORMATTING_GUIDE.md  CPP_STYLE_GUIDE.md  CPU_GPU_UI_FIX.md  CPU_LABEL_AND_TEMP_FIX.md  CURRENT_STATUS.md  DEBUG_CONTROLS_FIX.md  DEBUG_OVERHEAD_REMOVED.md  DIAGNOSE_LIBRARY.sh  ERROR_CHECK_RESULTS.md  FIXES_APPLIED.md  FORMATTING_SUMMARY.md  GC_OPTIMIZATION_COMPLETE.md  IMPLEMENTATION_COMPLETE.md  IMPLEMENTATION_SUMMARY.md  LARGE_ASSETS_EXCLUDED.md  MODEL_SHOWCASE_GUIDE.md  MODEL_SHOWCASE_IMPLEMENTATION.md  MODEL_SHOWCASE_IMPROVEMENTS.md  MODEL_SHOWCASE_QUALITY_FIX.md  MODEL_SHOWCASE_QUICKSTART.txt  MODEL_SHOWCASE_SCENE_FIX.md  MODEL_SHOWCASE_STANDALONE_FIX.md  MODEL_SHOWCASE_SYSTEM_FIX.md  MODEL_SHOWCASE_TESTING.md  MODEL_SHOWCASE_UI_FIXES.md  MODEL_SHOWCASE_UPDATES.md  NEXT_STEPS.md  (+33 more)
addons/gdquest-shaders/: .gdignore
art/: ASSET_INVENTORY.md
art/model-test/: Excelsior In Aeternum.ogg.import  sunflowers_puresky_2k.hdr.import
art/nature-benchmark/: anthurium_botany_01_2k.gltf.import  bark_debris_01_2k.gltf  bark_debris_01_2k.gltf.import  blue_grotto_2k.hdr.import  boulder_01_2k.gltf.import  brown_mud_02_2k.gltf  brown_mud_02_2k.gltf.import  brown_mud_03_2k.gltf.import  brown_mud_2k.gltf  brown_mud_2k.gltf.import  brown_mud_dry_2k.gltf  brown_mud_dry_2k.gltf.import  burned_ground_01_2k.gltf.import  calathea_orbifolia_01_2k.gltf  calathea_orbifolia_01_2k.gltf.import  celandine_01_2k.gltf.import  cheiridopsis_succulent_2k.gltf.import  coast_land_rocks_04_2k.gltf  coast_land_rocks_04_2k.gltf.import  coast_line_02_2k.gltf  coast_line_02_2k.gltf.import  coast_rocks_02_2k.gltf  coast_rocks_02_2k.gltf.import  coast_rocks_03_2k.gltf  coast_rocks_03_2k.gltf.import  coast_sand_01_2k.gltf.import  coast_sand_02_2k.gltf  coast_sand_02_2k.gltf.import  coast_sand_rocks_02_2k.gltf.import  crystalline_iceplant_2k.gltf  crystalline_iceplant_2k.gltf.import  dandelion_01_2k.gltf.import  dead_quiver_trunk_2k.gltf  dead_quiver_trunk_2k.gltf.import  dead_tree_trunk_02_2k.gltf.import  dead_tree_trunk_2k.gltf.import  dry_branches_medium_01_2k.gltf.import  fern_02_2k.gltf.import  fir_sapling_2k.gltf.import  fir_sapling_medium_2k.gltf.import  (+81 more)
art/textures/: anthurium_botany_01_arm_2k.jpg.import  anthurium_botany_01_diff_2k.jpg.import  anthurium_botany_01_nor_gl_2k.jpg.import  bark_debris_01_arm_2k.jpg.import  bark_debris_01_diff_2k.jpg.import  bark_debris_01_nor_gl_2k.jpg.import  boulder_01_arm_2k.jpg.import  boulder_01_diff_2k.jpg.import  boulder_01_nor_gl_2k.jpg.import  brown_mud_02_diff_2k.jpg.import  brown_mud_02_nor_gl_2k.jpg.import  brown_mud_02_rough_2k.jpg.import  brown_mud_03_diff_2k.jpg.import  brown_mud_03_nor_gl_2k.jpg.import  brown_mud_03_spec_2k.jpg.import  brown_mud_diff_2k.jpg.import  brown_mud_dry_diff_2k.jpg.import  brown_mud_dry_nor_gl_2k.jpg.import  brown_mud_dry_rough_2k.jpg.import  brown_mud_nor_gl_2k.jpg.import  brown_mud_rough_2k.jpg.import  burned_ground_01_diff_2k.jpg.import  burned_ground_01_nor_gl_2k.jpg.import  burned_ground_01_rough_2k.jpg.import  calathea_orbifolia_01_arm_2k.jpg.import  calathea_orbifolia_01_diff_2k.jpg.import  calathea_orbifolia_01_nor_gl_2k.jpg.import  celandine_01_arm_2k.jpg.import  celandine_01_diff_2k.jpg.import  celandine_01_nor_gl_2k.jpg.import  cheiridopsis_succulent_arm_2k.jpg.import  cheiridopsis_succulent_diff_2k.jpg.import  cheiridopsis_succulent_nor_gl_2k.jpg.import  coast_land_rocks_04_arm_2k.jpg.import  coast_land_rocks_04_diff_2k.jpg.import  coast_land_rocks_04_nor_gl_2k.jpg.import  coast_line_02_arm_2k.jpg.import  coast_line_02_diff_2k.jpg.import  coast_line_02_nor_gl_2k.jpg.import  coast_rocks_02_arm_2k.jpg.import  (+293 more)
cmake/: arm64-linux-toolchain.cmake
scenes/: main.tscn  model_showcase.tscn
scenes/benchmarks/: 01_gpu_basics.tscn
scenes/environments/: default_env.tres
scenes/ui/: loading_screen.tscn  model_showcase_overlay.tscn  (+1 more)
scripts/: camera_controller.gd  camera_controller.gd.uid  cinematic_camera.gd  cinematic_camera.gd.uid  crash_test.gd.uid  debug_controller.gd  debug_controller.gd.uid  main.gd  main.gd.uid  main_new.gd.uid  minimal_test.gd.uid  model_showcase.gd  model_showcase.gd.uid  simple_print_test.gd.uid  test_extension.gd.uid
shaders/: SHADER_REFERENCE.md
src/: benchmark_orchestrator.cpp  benchmark_orchestrator.h  benchmark_orchestrator.os  benchmark_orchestrator.windows.template_debug.x86_64.obj.import  register_types.cpp  register_types.h  register_types.os  register_types.windows.template_debug.x86_64.obj.import
(+103 files in other folders)
